--- a/LegitQuest/BattleService/BattleService.csproj
+++ b/LegitQuest/BattleService/BattleService.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Actors\EndingConditions\KOEndingCondition.cs" />
     <Compile Include="Battle.cs" />
     <Compile Include="BattleService.cs" />
+    <Compile Include="InternalMessage\Abilities\ITarget.cs" />
     <Compile Include="InternalMessage\BattleDefeat.cs" />
     <Compile Include="InternalMessage\BattleVictory.cs" />
     <Compile Include="InternalMessage\Abilities\DamageOverTime.cs" />
