--- a/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
+++ b/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
@@ -51,8 +51,9 @@
     <Compile Include="HealingDone.cs" />
     <Compile Include="PositionChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatusApplied.cs" />
-    <Compile Include="StatusRemoved.cs" />
+    <Compile Include="StatusChange.cs" />
+    <Compile Include="ViewModels\Character.cs" />
+    <Compile Include="ViewModels\Treasure.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
