--- a/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
+++ b/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DamageDealt.cs" />
     <Compile Include="EnemyDefeated.cs" />
     <Compile Include="HealingDone.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="PositionChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusChange.cs" />
