--- a/LegitQuest/EnemyService.cs/EnemyService.cs.csproj
+++ b/LegitQuest/EnemyService.cs/EnemyService.cs.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{87E53F27-0120-4795-B497-4A93304D0CBC}</ProjectGuid>
+    <ProjectGuid>{FE5C8AA8-7A2F-438A-90B2-96773A15BF18}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MessageDataStructures</RootNamespace>
-    <AssemblyName>MessageDataStructures</AssemblyName>
+    <RootNamespace>EnemyService.cs</RootNamespace>
+    <AssemblyName>EnemyService.cs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,34 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseService.cs" />
-    <Compile Include="BattleGeneration\BattleGenerationMessage.cs" />
-    <Compile Include="BattleGeneration\BattleGenerationRequest.cs" />
-    <Compile Include="BattleGeneration\Enemy.cs" />
-    <Compile Include="BattleGeneration\EnemyType.cs" />
-    <Compile Include="BattleGeneration\FieldType.cs" />
-    <Compile Include="Battle\AbilityUsed.cs" />
-    <Compile Include="Battle\AggregatedBattleInformation.cs" />
-    <Compile Include="Battle\BattleInitialization.cs" />
-    <Compile Include="Battle\BattleUpdate.cs" />
-    <Compile Include="Battle\BattleUpdates.cs" />
-    <Compile Include="Battle\CombatEnded.cs" />
-    <Compile Include="Battle\CommandAvailable.cs" />
-    <Compile Include="Battle\CommandIssued.cs" />
-    <Compile Include="Battle\DamageDealt.cs" />
-    <Compile Include="Battle\ActorDefeated.cs" />
-    <Compile Include="Battle\HealingDone.cs" />
-    <Compile Include="EnemyGeneration\Enemy.cs" />
-    <Compile Include="EnemyGeneration\EnemyGeneratedMessage.cs" />
-    <Compile Include="Message.cs" />
-    <Compile Include="Battle\PositionChanged.cs" />
-    <Compile Include="MessageReader.cs" />
-    <Compile Include="MessageReceivedEventArgs.cs" />
-    <Compile Include="MessageWriter.cs" />
+    <Compile Include="EnemyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Battle\StatusChange.cs" />
-    <Compile Include="ViewModels\Character.cs" />
-    <Compile Include="ViewModels\Treasure.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MessageDataStructures\MessageDataStructures.csproj">
+      <Project>{87e53f27-0120-4795-b497-4a93304d0cbc}</Project>
+      <Name>MessageDataStructures</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
