--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6E4BDF76-D363-452A-8D0E-13692D530927}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BattleService</RootNamespace>
+    <RootNamespace>BattleServiceLibrary</RootNamespace>
     <AssemblyName>BattleService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
