--- a/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
+++ b/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Battle\StatusChange.cs" />
     <Compile Include="ViewModels\Character.cs" />
+    <Compile Include="ViewModels\Position.cs" />
     <Compile Include="ViewModels\Treasure.cs" />
   </ItemGroup>
   <ItemGroup>
