--- a/LegitQuest/LegitQuest/LegitQuest.csproj
+++ b/LegitQuest/LegitQuest/LegitQuest.csproj
@@ -73,6 +73,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="AbilityAggregator.cs" />
     <Compile Include="AbilityDisplay.xaml.cs">
       <DependentUpon>AbilityDisplay.xaml</DependentUpon>
     </Compile>
