--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -71,7 +71,9 @@
     <Compile Include="InternalMessage\Targetted.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Compile Include="Actors\Characters\Classes\Warrior.cs" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MessageDataStructures\MessageDataStructures.csproj">
       <Project>{87e53f27-0120-4795-b497-4a93304d0cbc}</Project>
