--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Battle.cs" />
     <Compile Include="BattleService.cs" />
     <Compile Include="InternalMessage\Abilities\Ability.cs" />
+    <Compile Include="InternalMessage\Abilities\AddStatus.cs" />
     <Compile Include="InternalMessage\Abilities\DealStaticDamage.cs" />
     <Compile Include="InternalMessage\Abilities\Warrior\SwordAndBoard.cs" />
     <Compile Include="InternalMessage\BattleDefeat.cs" />
