--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -46,14 +46,16 @@
     <Compile Include="Actors\Characters\PlayerCharacter.cs" />
     <Compile Include="Actors\Characters\RandomNonPlayerCharacter.cs" />
     <Compile Include="Actors\EndingConditions\KOEndingCondition.cs" />
+    <Compile Include="Actors\Statuses\AttackDecreasedStatus.cs" />
     <Compile Include="Actors\Statuses\DamageOverTime.cs" />
     <Compile Include="Actors\Statuses\DefenseDecreasedStatus.cs" />
-    <Compile Include="Actors\Statuses\DefenseIncrease.cs" />
     <Compile Include="Actors\Statuses\DefenseIncreasedStatus.cs" />
     <Compile Include="Battle.cs" />
     <Compile Include="BattleService.cs" />
     <Compile Include="InternalMessage\Abilities\Ability.cs" />
     <Compile Include="InternalMessage\Abilities\AddStatus.cs" />
+    <Compile Include="InternalMessage\Abilities\AttackDecreased.cs" />
+    <Compile Include="InternalMessage\Abilities\AttackIncreased.cs" />
     <Compile Include="InternalMessage\Abilities\DealStaticDamage.cs" />
     <Compile Include="InternalMessage\Abilities\Mage\Flurry.cs" />
     <Compile Include="InternalMessage\Abilities\Warrior\SwordAndBoard.cs" />
