Added Prayer ability
fixes #87

--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -60,6 +60,7 @@
     <Compile Include="InternalMessage\Abilities\AttackIncreased.cs" />
     <Compile Include="InternalMessage\Abilities\DealStaticDamage.cs" />
     <Compile Include="InternalMessage\Abilities\Mage\Flurry.cs" />
+    <Compile Include="InternalMessage\Abilities\Priest\Prayer.cs" />
     <Compile Include="InternalMessage\Abilities\Warrior\SwordAndBoard.cs" />
     <Compile Include="InternalMessage\BattleDefeat.cs" />
     <Compile Include="InternalMessage\BattleVictory.cs" />
