--- a/LegitQuest/EnemyService.cs/EnemyServiceLibrary.csproj
+++ b/LegitQuest/EnemyService.cs/EnemyServiceLibrary.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnemyGenerators\GoblinGenerator.cs" />
+    <Compile Include="EnemyGenerators\SlimeGenerator.cs" />
     <Compile Include="EnemyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
