--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Actors\Characters\Classes\Priest.cs" />
     <Compile Include="Actors\Characters\Enemies\BlueSlime.cs" />
     <Compile Include="Actors\Characters\Enemies\Goblin.cs" />
+    <Compile Include="Actors\Characters\Enemies\RedSlime.cs" />
     <Compile Include="Actors\Characters\NonPlayerCharacter.cs" />
     <Compile Include="Actors\Characters\PlayerCharacter.cs" />
     <Compile Include="Actors\Characters\RandomNonPlayerCharacter.cs" />
@@ -64,14 +65,20 @@
     <Compile Include="InternalMessage\Abilities\Goblin\GoblinPunch.cs" />
     <Compile Include="InternalMessage\Abilities\Mage\Flurry.cs" />
     <Compile Include="InternalMessage\Abilities\Priest\Prayer.cs" />
+    <Compile Include="InternalMessage\Abilities\Slime\BlueMerge.cs" />
+    <Compile Include="InternalMessage\Abilities\Slime\BlueMergeRequest.cs" />
+    <Compile Include="InternalMessage\Abilities\Slime\BlueMergeResult.cs" />
     <Compile Include="InternalMessage\Abilities\Warrior\SwordAndBoard.cs" />
     <Compile Include="InternalMessage\BattleDefeat.cs" />
     <Compile Include="InternalMessage\BattleVictory.cs" />
     <Compile Include="InternalMessage\Abilities\DamageOverTime.cs" />
+    <Compile Include="InternalMessage\DataRequests\AbilityDataRequest.cs" />
+    <Compile Include="InternalMessage\DataRequests\DataRequest.cs" />
     <Compile Include="InternalMessage\DataRequests\IsHPBelowXPercentage.cs" />
     <Compile Include="InternalMessage\DataRequests\WhoHasLowestHealth.cs" />
     <Compile Include="InternalMessage\DataRequests\WhoIsEngagedWithMe.cs" />
     <Compile Include="InternalMessage\DataRequests\WhoLacksStatusEffects.cs" />
+    <Compile Include="InternalMessage\DataResults\DataResult.cs" />
     <Compile Include="InternalMessage\DataResults\Target.cs" />
     <Compile Include="InternalMessage\DataResults\TargetList.cs" />
     <Compile Include="InternalMessage\DataResults\YesOrNo.cs" />
