--- a/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
+++ b/LegitQuest/MessageDataStructures/MessageDataStructures.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Battle\DamageDealt.cs" />
     <Compile Include="Battle\ActorDefeated.cs" />
     <Compile Include="Battle\HealingDone.cs" />
+    <Compile Include="Battle\MaxHPChange.cs" />
     <Compile Include="DirectMessageReader.cs" />
     <Compile Include="EnemyGeneration\Enemy.cs" />
     <Compile Include="EnemyGeneration\EnemyGeneratedMessage.cs" />
