--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -93,6 +93,7 @@
     <Compile Include="InternalMessage\InternalMessage.cs" />
     <Compile Include="InternalMessage\Targetted.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\RNG.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\Characters\Classes\Warrior.cs" />
