--- a/LegitQuest/LegitQuest/LegitQuest.csproj
+++ b/LegitQuest/LegitQuest/LegitQuest.csproj
@@ -97,12 +97,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ManaDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MessageDisplay.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManaDisplay.xaml.cs">
+      <DependentUpon>ManaDisplay.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MessageDisplay.xaml.cs">
       <DependentUpon>MessageDisplay.xaml</DependentUpon>
     </Compile>
