--- a/LegitQuest/BattleService/BattleServiceLibrary.csproj
+++ b/LegitQuest/BattleService/BattleServiceLibrary.csproj
@@ -69,6 +69,7 @@
     <Compile Include="InternalMessage\Abilities\Slime\BlueMerge.cs" />
     <Compile Include="InternalMessage\Abilities\Slime\BlueMergeRequest.cs" />
     <Compile Include="InternalMessage\Abilities\Slime\BlueMergeResult.cs" />
+    <Compile Include="InternalMessage\Abilities\TriAttack\TriAttackContribution.cs" />
     <Compile Include="InternalMessage\Abilities\Warrior\SwordAndBoard.cs" />
     <Compile Include="InternalMessage\BattleDefeat.cs" />
     <Compile Include="InternalMessage\BattleVictory.cs" />
