Added blank page
fixes #111

--- a/LegitQuest/LegitQuestWebApp/LegitQuestWebApp.csproj
+++ b/LegitQuest/LegitQuestWebApp/LegitQuestWebApp.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BattleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -234,6 +235,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Battle\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -245,6 +247,20 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GuiServiceLibrary\GuiServiceLibrary.csproj">
+      <Project>{572bed69-2e5f-4a2b-9199-494bbb75d45f}</Project>
+      <Name>GuiServiceLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MediatorService\MediatorServiceLibrary.csproj">
+      <Project>{44c2ad5b-b9f6-47b6-a4a9-a30834162beb}</Project>
+      <Name>MediatorServiceLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MessageDataStructures\MessageDataStructures.csproj">
+      <Project>{87e53f27-0120-4795-b497-4a93304d0cbc}</Project>
+      <Name>MessageDataStructures</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
