--- a/LegitQuest/LegitQuestWebApp/LegitQuestWebApp.csproj
+++ b/LegitQuest/LegitQuestWebApp/LegitQuestWebApp.csproj
@@ -175,6 +175,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="BattleHub.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BattleController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
